Status/2025q4/lkpi-wireless.adoc: typo

--- a/website/content/en/status/report-2025-10-2025-12/lkpi-wireless.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/lkpi-wireless.adoc
@@ -24,7 +24,7 @@ With the update of drivers to newer versions a few firmware files needed updates
 The automated way we used to use for man:iwlwifi[4] no longer works so we now pick all we can get but still try to classify the files into flavors for as long as we can.
 The wifi-firmware ports framework got completely switched to only shipping plain firmware files and no more kernel modules.
 This means that kernel updates no longer require package upgrades and firmware can be updated independently (for most).
-Firmware fo all the other drivers supported (or unsupported) also got updated.
+Firmware for all the other drivers supported (or unsupported) also got updated.
 
 ==== Intel iwlwifi support
 
