Update re@ membership
jfree@ and mmokhi@ are leaving the release engineering team, with
thanks for their service.

With hat:	re@

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3834,8 +3834,8 @@
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
-:re-members: {dch}, {blackend}, {jfree}, {delphij}, {emaste}, {mmokhi}, {cperciva}, {bofh}, {ivy}
-:re-members-email: {dch-email}, {blackend-email}, {jfree-email}, {delphij-email}, {emaste-email}, {mmokhi-email}, {cperciva-email}, {bofh-email}, {ivy-email}
+:re-members: {dch}, {blackend}, {delphij}, {emaste}, {cperciva}, {bofh}, {ivy}
+:re-members-email: {dch-email}, {blackend-email}, {delphij-email}, {emaste-email}, {cperciva-email}, {bofh-email}, {ivy-email}
 
 // FreeBSD Security Officer
 :so: {gordon}
