Status/2025Q4/bananapi-r64-drivers.adoc: Add report
Signed-off-by: Martin Filla <freebsd@sysctl.cz>

--- a/website/content/en/status/report-2025-10-2025-12/bananapi-r64-drivers.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/bananapi-r64-drivers.adoc
@@ -19,6 +19,7 @@ The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, 
   * **XHCI driver**
   * **Watchdog driver**
   * **RTC driver**
+  * **RNG driver**
 
 Other essential components—Ethernet, USB, SATA, Wi-Fi, etc.—are not yet implemented.
 
