Status/2025Q4/bananapi-r64-drivers.adoc: Add report
Signed-off-by: Martin Filla <freebsd@sysctl.cz>

--- a/website/content/en/status/report-2025-10-2025-12/bananapi-r64-drivers.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/bananapi-r64-drivers.adoc
@@ -12,7 +12,7 @@ The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, 
 - Implemented so far:
   * **UART driver**
   * **Clock management (clocks)**
-  * **Pinctrl/gpio driver** – in active development gpio part
+  * **Pinctrl
   * **Storage controllers (eMMC/SD/MMC) driver**
   * **Ethernet Switch mt7531 driver**
   * **Ethernet mt7622 driver**
@@ -29,6 +29,10 @@ Other essential components—Ethernet, USB, SATA, Wi-Fi, etc.—are not yet impl
   - SATA / AHCI / T-PHY
   - Wi-Fi (likely MediaTek MT7615)
   - GPIO subsystems
+  - I2C
+  - SPI
+  - PWM
+  - PCIE
 
 * Work in progress drivers
   - T-PHY
