[phb][Uses]: Update gssapi
Add mit-devel argument. Following
https://cgit.FreeBSD.org/ports/commit/?id=95035ba6035228884a4f5678bbbd3624fdccb673

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1112,12 +1112,13 @@ Registers a dependency on package:textproc/groff[] if not present in the base sy
 [[uses-gssapi]]
 == `gssapi`
 
-Possible arguments: (none), `base` (default), `heimdal`, `mit`, `flags`, `bootstrap`
+Possible arguments: (none), `base` (default), `heimdal`, `mit`, `mit-devel`, `flags`, `bootstrap`
 
 Handle dependencies needed by consumers of the GSS-API.
 Only libraries that provide the Kerberos mechanism are available.
 By default, or set to `base`, the GSS-API library from the base system is used.
-Can also be set to `heimdal` to use package:security/heimdal[], or `mit` to use package:security/krb5[].
+Can also be set to `heimdal` to use package:security/heimdal[], `mit` to use
+package:security/krb5[], or `mit-devel` to use package:security/krb5-devel[].
 
 When the local Kerberos installation is not in `LOCALBASE`, set `HEIMDAL_HOME` (for `heimdal`) or `KRB5_HOME` (for `krb5`) to the location of the Kerberos installation.
 
@@ -1131,7 +1132,7 @@ These variables are exported for the ports to use:
 * `GSSAPILIBS`
 * `GSSAPI_CONFIGURE_ARGS`
 
-The `flags` option can be given alongside `base`, `heimdal`, or `mit` to automatically add `GSSAPICPPFLAGS`, `GSSAPILDFLAGS`, and `GSSAPILIBS` to `CFLAGS`, `LDFLAGS`, and `LDADD`, respectively.
+The `flags` option can be given alongside `base`, `heimdal`, `mit`, or `mit-devel` to automatically add `GSSAPICPPFLAGS`, `GSSAPILDFLAGS`, and `GSSAPILIBS` to `CFLAGS`, `LDFLAGS`, and `LDADD`, respectively.
 For example, use `base,flags`.
 
 The `bootstrap` option is a special prefix only for use by package:security/krb5[] and package:security/heimdal[].
