GSoC: We will participate again in 2026
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/projects/summerofcode.adoc
+++ b/website/content/en/projects/summerofcode.adoc
@@ -6,7 +6,7 @@ sidenav: developers
 Google Summer of Code or GSoC is an annual event sponsored by Google, Inc.
 It enables contributors to spend from 8 to 22 weeks over the summer "interning" with open source software projects.
 The work is done under the guidance of one or more mentors and the effort is rewarded with https://developers.google.com/open-source/gsoc/help/student-stipends[a stipend].
-FreeBSD has been a participating organization every year since 2005 and was again awarded a spot as a mentoring organization in 2024 with https://wiki.FreeBSD.org/SummerOfCode2024Projects[eleven projects].
+FreeBSD has participated as a mentoring organization every year since GSoC began in 2005, and we are applying again in 2026.
 
 If you are interested in operating system development, "interning" with a longstanding and successful open source operating system like FreeBSD is an excellent opportunity.
 Founded in 1993, FreeBSD is an advanced operating system for server, desktop, and embedded computer platforms.
