dev-handbook: Remove reference to kgdb in EOL FreeBSD
kgdb exists in the base system only in FreeBSD 11 and earlier, which is
well past EOL.  Remove the reference, leaving only a reference to the
kgdb port or package from devel/gdb.

Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/zh-tw/books/developers-handbook/kerneldebug/_index.adoc
+++ b/documentation/content/zh-tw/books/developers-handbook/kerneldebug/_index.adoc
@@ -146,7 +146,7 @@ After rebooting, your system should save a dump in [.filename]#/var/crash# along
 
 [NOTE]
 ====
-This section covers man:kgdb[1]. The latest version is included in the package:devel/gdb[]. An older version is also present in FreeBSD 11 and earlier.
+This section covers man:kgdb[1]. The latest version is included in the package:devel/gdb[].
 ====
 
 To enter into the debugger and begin getting information from the dump, start kgdb:
