Enhance installation tips and warnings in documentation
Expanded tips and warnings regarding FreeBSD installation.

--- a/documentation/content/en/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.adoc
@@ -86,7 +86,7 @@ Once it has been determined that the system meets the minimum hardware requireme
 
 [TIP]
 ====
-Consider using crossref:virtualization[virtualization,virtualization] when wanting to use FreeBSD on a system that already has another operating system installed.
+Consider using crossref:virtualization[virtualization,virtualization] when wanting to use FreeBSD on a system that already has another operating system installed, or if you are unfamiliar with FreeBSD.
 ====
 
 Before moving on to the installation, check that the system is ready by verifying the items in this checklist:
@@ -211,7 +211,7 @@ This section describes two of these utilities.
 [IMPORTANT]
 ====
 Before proceeding, back up any important data on the USB stick.
-This procedure will erase the existing data on the stick.
+This procedure will erase the existing data on the USB stick.
 ====
 
 [[bsdinstall-usb-dd]]
