GSoC: Add missing table of contents entry for LLM Policy
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/projects/summerofcode.adoc
+++ b/website/content/en/projects/summerofcode.adoc
@@ -21,6 +21,7 @@ This can be a great job networking opportunity!
 * <<project,Finding a Project and a Mentor>>
 * <<proposals,Proposal Guidelines>>
 * <<communication,Communication and Openness>>
+* <<llm,LLM Policy>>
 * <<faq,Frequently Asked Questions>>
 
 [[steps]]
