--- a/website/content/en/releases/15.0R/errata.adoc
+++ b/website/content/en/releases/15.0R/errata.adoc
@@ -76,8 +76,8 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 **Workaround**: do not install this release on Apple G5 systems +
 **State**: fixed in main - https://bugs.freebsd.org/292341 +
 
-5. **man:loader.efi[8]** has a regression preventing boot on some systems +
-**Workaround**: set `console="eficom"` at the man:loader[8] prompt if it hangs when loading the kernel +
+5. **man:loader.efi[8]** has a regression preventing boot on some systems with remote serial console facilities including HPE systems +
+**Workaround**: unset `hw.uart.console` at the man:loader[8] prompt if it hangs and/or instant reboots when loading the kernel +
 **State**: fixed in main - https://bugs.freebsd.org/291461 +
 
 [[late-news]]
