Document __FreeBSD_version bumps: 1600010-1600011

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -111,6 +111,16 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |January 16, 2026
 |16.0-CURRENT after changing the mac(9) policy interface to include entry points for jail operations
 
+|1600010
+|gitref:ac5a19ec6989675c8ec6c3ca245dba243d1a6416[repository="src",length=12]
+|January 23, 2026
+|16.0-CURRENT after making xdrproc_t to always take two arguments.
+
+|1600011
+|gitref:d185e9fae91a48041363e36a6ee4a2a9c567fc16[repository="src",length=12]
+|January 25, 2026
+|16.0-CURRENT after changes to eventfd API that exposes that API in linuxkpi for DRM drivers.
+
 |===
 
 [[versions-15]]
