--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -94,17 +94,17 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |1600006
 |gitref:c10447a9256b561bf2edf26b5abf5f28071a15c7[repository="src",length=12]
 |December 15, 2025
-|16.0-CURRENT after the `BIOCGETIFLIST` ioctl was added to bpf(4)
+|16.0-CURRENT after the `BIOCGETIFLIST` ioctl was added to bpf(4).
 
 |1600007
 |gitref:1a26b161d829c9b52fec87fe44b4db50e8f046ff[repository="src",length=12]
 |December 18, 2025
-|16.0-CURRENT after vmap_pfn() was added to the Linuxolator
+|16.0-CURRENT after vmap_pfn() was added to the Linuxolator.
 
 |1600008
 |gitref:66eedcb0224df03e56513f3caf1df93a52b6a919[repository="src",length=12]
 |January 13, 2026
-|16.0-CURRENT after struct sdt_probe ABI was broken to fix the probe ID type
+|16.0-CURRENT after struct sdt_probe ABI was broken to fix the probe ID type.
 
 |1600009
 |gitref:22569a1d80203bd4835a1d5d4660de5dbe334509[repository="src",length=12]
