--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -109,7 +109,7 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |1600009
 |gitref:22569a1d80203bd4835a1d5d4660de5dbe334509[repository="src",length=12]
 |January 16, 2026
-|16.0-CURRENT after changing the mac(9) policy interface to include entry points for jail operations
+|16.0-CURRENT after changing the mac(9) policy interface to include entry points for jail operations.
 
 |1600010
 |gitref:ac5a19ec6989675c8ec6c3ca245dba243d1a6416[repository="src",length=12]
