porters-hadbook: describe KPI change in ip6 ND context
Describe KPI change in ip6 ND context which missed __FreeBSD_version bump.

Use nearest next as time window is narrow and potential consumers ar rare.

Reviewed by:	glebius

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -121,6 +121,10 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |January 25, 2026
 |16.0-CURRENT after changes to eventfd API that exposes that API in linuxkpi for DRM drivers.
 
+|(not changed)
+|gitref:576ee62dd2e5e0454a5316eb9207f4ebaa543171[repository="src",length=12]
+|January 25, 2026
+|16.0-CURRENT after changing IPv6 neighbor discovery context storage directly in struct in6_ifextra.  It is a KPI change that may affect build of network related external kernel modules.
 |===
 
 [[versions-15]]
