Update re@ membership
carlavilla, leres, vladlen, and ziaee are joining the release
engineering team.

With hat:	re@

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3834,8 +3834,8 @@
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
-:re-members: {dch}, {blackend}, {delphij}, {emaste}, {cperciva}, {bofh}, {ivy}
-:re-members-email: {dch-email}, {blackend-email}, {delphij-email}, {emaste-email}, {cperciva-email}, {bofh-email}, {ivy-email}
+:re-members: {carlavilla}, {dch}, {blackend}, {leres}, {delphij}, {emaste}, {cperciva}, {bofh}, {vladlen}, {ivy}, {ziaee}
+:re-members-email: {carlavilla-email}, {dch-email}, {blackend-email}, {leres-email}, {delphij-email}, {emaste-email}, {cperciva-email}, {bofh-email}, {vladlen-email}, {ivy-email}, {ziaee-email}
 
 // FreeBSD Security Officer
 :so: {gordon}
