--- a/website/content/en/releases/15.0R/errata.adoc
+++ b/website/content/en/releases/15.0R/errata.adoc
@@ -56,6 +56,9 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |Errata |Date |Topic
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:19.zfs.asc[FreeBSD-EN-25:19.zfs] |16 December 2025 |Unprivileged kernel NULL pointer dereference
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:20.vmm.asc[FreeBSD-EN-25:20.vmm] |16 December 2025 |bhyve(8) PCI passthru regression
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:01.devinfo.asc[FreeBSD-EN-26:01.devinfo] |27 January 2026 |devinfo output formatting regression
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:02.arm64.asc[FreeBSD-EN-26:02.arm64] |27 January 2026 |arm64 SVE signal context misalignment
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:03.vm.asc[FreeBSD-EN-26:03.vm] |27 January 2026 |The page fault handler fails to zero memory
 |===
 
 [[open-issues]]
