Add a contributor to the list

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -1931,6 +1931,7 @@
 * Ryo Okamoto <mailto:ryo@aquahill.net[ryo@aquahill.net]>
 * RyoTa SimaMoto <mailto:liangtai.s4@gmail.com[liangtai.s4@gmail.com]>
 * Ryuichiro IMURA <mailto:imura@af.airnet.ne.jp[imura@af.airnet.ne.jp]>
+* ru M1cRO <mailto:rum1cro@yandex.ru[rum1cro@yandex.ru]>
 * SANETO Takanori <mailto:sanewo@strg.sony.co.jp[sanewo@strg.sony.co.jp]>
 * SASAKI Shunsuke <mailto:ele@pop17.odn.ne.jp[ele@pop17.odn.ne.jp]>
 * SAWADA Mizuki <mailto:miz@qb3.so-net.ne.jp[miz@qb3.so-net.ne.jp]>
