--- a/website/content/en/releases/15.0R/errata.adoc
+++ b/website/content/en/releases/15.0R/errata.adoc
@@ -70,7 +70,7 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 
 2. **man:devinfo[8]** output format accidentally changed +
 **Workaround**: users parsing man:devinfo[8] must build it from a newer source +
-**State**: reverted in main - https://bugs.freebsd.org/291511 +
+**State**: reverted in FreeBSD 15.0-RELEASE-p2 -  https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:01.devinfo.asc +
 
 3. **man:pkgbase[7]** system upgrading from 14.3 to 15.0 is not supported +
 **Workaround**: systems installed with man:pkgbase[7] must backup and reinstall +
