Handbook: mirrors: remove FreeBSD Mall, Inc.
www.freebsdmall.com became unavailable some time ago.

Also, Getlinux does not offer discs.

--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -441,19 +441,9 @@ For more details, including commit messages lists, see the crossref:handbook/ere
 These are also published as SSHFP records in DNS.
 
 [[mirrors-disc]]
-== Disc Copies
+== Discs and USB media
 
-FreeBSD disc copies are available from several online retailers:
-
-* FreeBSD Mall, Inc. +
-1164 Claremont Dr +
-Brentwood, CA +
-94513 +
-USA +
-Phone: +1 925 240-6652 +
-Fax: +1 925 674-0821 +
-Email: info@freebsdmall.com +
-Website: https://www.freebsdmall.com
+Online retailers include:
 
 * Getlinux +
 Website: https://www.getlinux.fr/
