--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -263,7 +263,7 @@ If you plan to get FreeBSD via FTP or HTTPS, check the FreeBSD Handbook for link
 [[distribution]]
 == Purchase FreeBSD Media
 
-FreeBSD can be acquired on DVD from https://www.freebsdmall.com/[FreeBSD Mall], and other link:{handbook}mirrors/#mirrors-disc[DVD publishers].
+Retailers are link:{handbook}mirrors/#mirrors-disc[listed in the FreeBSD Handbook].
 
 [[apps]]
 == Applications and Utility Software
