handbook/en/advanced-networking: Fix a typo
Reviewed by:		ziaee
Differential Revision:	https://reviews.freebsd.org/D55043

--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -186,7 +186,7 @@ crossref:advanced-networking[routeflags,Commonly Seen Routing Table Flags] summa
 |Route involves references to Ethernet (link) hardware.
 |===
 
-On a FreeBSD system, the default route can defined in [.filename]#/etc/rc.conf# by specifying the IP address of the default gateway:
+On a FreeBSD system, the default route can be defined in [.filename]#/etc/rc.conf# by specifying the IP address of the default gateway:
 
 [.programlisting]
 ....
