handbook/cutting-edge: Fix a typo
We should not check the running version of the kernel when chrooting,
because chroot uses the booted kernel.

Reported by:	ykla <yklaxds@gmail.com>
Closes:		https://github.com/freebsd/freebsd-doc/pull/574

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1325,7 +1325,7 @@ Ignore the mismatch and continue? [y/N]:
 
 Check and confirm that.
 
-To check if that was successful, chroot into the mountpoint of the boot environment and run `freebsd-version -kru`.
+To check if that was successful, chroot into the mountpoint of the boot environment and run `freebsd-version -ku`.
 
 [source,shell]
 ....
