committers-guide: Tidy Fixes: trailer instructions
Reviewed by:		jlduran
Reported by:		emaste, jlduran
Differential Revision:	https://reviews.freebsd.org/D55121

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2645,7 +2645,7 @@ Approved by: re (username)
 |The name of the project (if any) from which the code was obtained. Do not use this line for the name of an individual person.
 
 |`Fixes:`
-|The Git short hash and the title line of a commit that is fixed by this change as returned by `git log -n 1 --pretty=format:'%h ("%s")' GIT-COMMIT-HASH`.
+|The Git short hash and the title line of a commit that is fixed by this change as returned by `git log -n1 --format='%h ("%s")' GIT-COMMIT-HASH`.
 We include the commit title so that the referenced commit can be located even in the case that a future VCS migration invalidates hash references.
 
 |`MFC after:`
