committers-guide: Refer to new port name for git-arc
The git-arc script was moved from devel/freebsd-git-devtools to
devel/freebsd-git-arc.

Reviewed by:	ziaee
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D55131

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2991,7 +2991,7 @@ You can find out more about Bugzilla at:
 The FreeBSD Project utilizes https://reviews.freebsd.org[Phabricator] for code review requests.
 See the https://wiki.freebsd.org/Phabricator[Phabricator wiki page] for details.
 
-Please use the `git arc` command provided by `devel/freebsd-git-devtools` (install the port or package, then type `git help arc` for documentation) to create and update Phabricator reviews.
+Please use the `git arc` command provided by `devel/freebsd-git-arc` (install the port or package, then type `git help arc` for documentation) to create and update Phabricator reviews.
 This will make it easier for others to review and test your patches.
 
 Committers with non-``FreeBSD.org`` Phabricator accounts can have the old account renamed to the ``FreeBSD.org`` account by following these steps:
