--- a/website/content/en/releases/14.4R/hardware.adoc
+++ b/website/content/en/releases/14.4R/hardware.adoc
@@ -576,7 +576,9 @@ driver supports the following cards:
 
 
 
-The currently supported ATA/SATA controller chips are:
+The
+**ata**
+driver supports the IDE interface on the following ATA/SATA controllers:
 
 Acard:
 
@@ -3908,6 +3910,16 @@ The
 **ubser**
 driver provides support for the BWCT console management serial adapters.
 
+
+
+The
+**uchcom**
+driver supports the following USB to serial UART controllers:
+
+*	WinChipHead CH9102 (max 6Mbps)
+*	WinChipHead CH343 (max 6Mbps)
+*	WinChipHead CH341 (max 2Mbps)
+*	WinChipHead CH340 (max 2Mbps)
 
 
 
