administration: Organize re and ports-secteam
+ Move Ports Security Team after Security Team
+ Primary Release Engineering is now Release Engineering
+ Move Release Engineering into Teams before Security team

Discussed with:	cperciva

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -21,14 +21,13 @@ This page lists teams, groups and individuals within the FreeBSD project with de
 ** <<t-core, Core Team>>
 ** <<t-doceng, Documentation Engineering Team>>
 ** <<t-portmgr, Ports Management Team>>
-** <<t-ports-secteam, Ports Security Team>>
 ** <<t-pkgmgr, Packages Management Team>>
 ** <<t-srcmgr, Source Management Team>>
-* Release Engineering
-** <<t-re, Primary Release Engineering Team>>
 * Teams
 ** <<t-donations, Donations Team>>
+** <<t-re, Release Engineering Team>>
 ** <<t-secteam, Security Team>>
+** <<t-ports-secteam, Ports Security Team>>
 ** <<t-vendor, Vendor Relations>>
 * Secretaries
 ** <<t-core-secretary, Core Team Secretary>>
@@ -89,18 +88,6 @@ The https://www.freebsd.org/portmgr/charter/[portmgr team charter] describes the
 * {rene}
 * {dvl}
 
-[[t-ports-secteam]]
-== FreeBSD Ports Security Team <ports-secteam@FreeBSD.org>
-
-The primary responsibility of the FreeBSD Port Security Team is to provide rapid response to security incidents that affects the FreeBSD ports collection and protect the FreeBSD user community by keeping the community informed of bugs, exploits, popular attacks, and other risks.
-More details are available on the https://wiki.freebsd.org/PortsSecteam[Wiki page].
-
-* {fernape}
-* {fluffy}
-* {joneum}
-* {riggs}
-* {tz}
-
 [[t-pkgmgr]]
 == FreeBSD Packages Management Team <pkgmgr@FreeBSD.org>
 
@@ -120,11 +107,21 @@ The https://www.freebsd.org/srcmgr/charter/[srcmgr team charter] describes the d
 * {jhb}
 * {markj}
 
-[[t-re]]
-== Primary Release Engineering Team <re@FreeBSD.org>
+[[t-donations]]
+== Donations Team <donations@FreeBSD.org>
 
-The Primary Release Engineering Team is responsible for setting and publishing release schedules for official project releases of FreeBSD, announcing code freezes and maintaining `releng/*` branches, among other things.
-The https://www.freebsd.org/releng/charter/[release engineering team charter] describes the duties and responsibilities of the Primary Release Engineering Team in greater detail.
+The Donations Team is responsible for responding to donations offers, establishing donation guidelines and procedures, and coordinating donation offers with the FreeBSD developer community.
+A more detailed description of the duties of the Donations Team is available at link:https://www.freebsd.org/donations/[FreeBSD Donations Liaison].
+
+* {gahr}
+* {bhughes}
+* {adridg}
+
+[[t-re]]
+== Release Engineering Team <re@FreeBSD.org>
+
+The Release Engineering Team is responsible for setting and publishing release schedules for official project releases of FreeBSD, announcing code freezes and maintaining `releng/*` branches, among other things.
+The https://www.freebsd.org/releng/charter/[release engineering team charter] describes the duties and responsibilities of the Release Engineering Team in greater detail.
 
 * {carlavilla}
 * {dch}
@@ -137,16 +134,6 @@ The https://www.freebsd.org/releng/charter/[release engineering team charter] de
 * {vladlen}
 * {ivy}
 * {ziaee}
-
-[[t-donations]]
-== Donations Team <donations@FreeBSD.org>
-
-The Donations Team is responsible for responding to donations offers, establishing donation guidelines and procedures, and coordinating donation offers with the FreeBSD developer community.
-A more detailed description of the duties of the Donations Team is available at link:https://www.freebsd.org/donations/[FreeBSD Donations Liaison].
-
-* {gahr}
-* {bhughes}
-* {adridg}
 
 [[t-secteam]]
 == Security Team <secteam@FreeBSD.org>
@@ -163,6 +150,18 @@ The FreeBSD Security Officer Charter describes the duties and responsibilities o
 * {markj}
 * {oshogbo}
 * {philip}
+
+[[t-ports-secteam]]
+== FreeBSD Ports Security Team <ports-secteam@FreeBSD.org>
+
+The primary responsibility of the FreeBSD Port Security Team is to provide rapid response to security incidents that affects the FreeBSD ports collection and protect the FreeBSD user community by keeping the community informed of bugs, exploits, popular attacks, and other risks.
+More details are available on the https://wiki.freebsd.org/PortsSecteam[Wiki page].
+
+* {fernape}
+* {fluffy}
+* {joneum}
+* {riggs}
+* {tz}
 
 [[t-vendor]]
 == Vendor Relations <vendor-relations@FreeBSD.org>
