committers-guide: Add columns for GCC 15 external toolchains
Reviewed by:	lwhsu
Differential Revision:	https://reviews.freebsd.org/D55134

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -3309,31 +3309,36 @@ The versions of supported compilers for a given branch such as `main` or `stable
 The authoritative source for supported compiler versions are automated CI jobs tested in GitHub's cross-build actions and Jenkins.
 
 [.tblbasic]
-[cols="10*",options="header",]
+[cols="12*",options="header",]
 |===
 |Branch | In-tree Compiler
 |llvm12 | llvm13 | llvm14 | llvm15 | llvm18
-|amd64-gcc12 | amd64-gcc13 | amd64-gcc14
+|amd64-gcc12 | amd64-gcc13 | amd64-gcc14 | amd64-gcc15
+|riscv64-gcc15
 
 |main | llvm 19
 |   |   |   | Y | Y
-| Y | Y | Y
+| Y | Y | Y | Y
+| Y
 
 |stable/15 | llvm 19
 |   |   | Y |   | Y
-| Y | Y | Y
+| Y | Y | Y |
+|
 
 |stable/14 | llvm 19
 | Y | Y | Y |   |
-| Y |   | Y
+| Y |   | Y |
+|
 
 |stable/13 | llvm 19
 | Y | Y | Y |   |
-| Y |   | Y
+| Y |   | Y |
+|
 |===
 
-GCC toolchains are tested for amd64 via CI jobs in Jenkins.
-LLVM toolchains are tested for aarch64 and arm64 in GitHub's cross-build actions.
+GCC toolchains are tested for amd64 and riscv64 via CI jobs in Jenkins.
+LLVM toolchains are tested for aarch64 and amd64 in GitHub's cross-build actions.
 
 === Other Suggestions
 
