Add mew14930xvi to the list (+)
While I'm here, move another record to keep the list more sorted.

Sponsored by:	tipi.work

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -1804,6 +1804,7 @@
 * Piotr Florczyk <mailto:p.florczyk@adminworkshop.pl[p.florczyk@adminworkshop.pl]>
 * Piotr Rybicki <mailto:meritus@innervision.pl[meritus@innervision.pl]>
 * Piotr Smyrak <mailto:piotr.smyrak@heron.pl[piotr.smyrak@heron.pl]>
+* Piotr Szerman <mailto:pmsz@tlen.pl[pmsz@tlen.pl]>
 * Pius Fischer <mailto:pius@ienet.com[pius@ienet.com]>
 * Pomegranate <mailto:daver@flag.blackened.net[daver@flag.blackened.net]>
 * Pontus Stenetorp <mailto:ninjin@kth.se[ninjin@kth.se]>
@@ -2400,5 +2401,5 @@
 * geoffroy desvernay <mailto:dgeo@centrale-marseille.fr[dgeo@centrale-marseille.fr]>
 * gspu <mailto:gspurki@gmail.com[gspurki@gmail.com]>
 * lightside <mailto:lightside@gmx.com[lightside@gmx.com]>
-* Piotr Szerman <mailto:pmsz@tlen.pl[pmsz@tlen.pl]>
+* mew14930xvi <mailto:mew14930xvi@inbox.lv[mew14930xvi@inbox.lv]>
 * rossiya <mailto:rossiya@gmail.com[rossiya@gmail.com]>
