website/ru: Update administration.adoc
Update to the EN revision cdf54afec844cf096ccd5b922cc8942e97517a2e
Some wording improvements.

--- a/website/content/ru/administration.adoc
+++ b/website/content/ru/administration.adoc
@@ -1,14 +1,14 @@
 ---
-title: "FreeBSD Project Administration and Management"
+title: "Администрирование и управление проектом FreeBSD"
 sidenav: about
 ---
 
 include::shared/authors.adoc[]
 
 ////
-NOTE: If any alias listed on this page is modified in the
-/etc/aliases on the FreeBSD project's mail server,
-then this page must be updated.
+ПРИМЕЧАНИЕ: Если какой-либо алиас, указанный на этой странице, изменяется в
+файле /etc/aliases на почтовом сервере проекта FreeBSD,
+то эта страница обязательно должна быть актуализирована.
 ////
 
 = Администрирование и управление проектом FreeBSD
@@ -21,22 +21,21 @@ then this page must be updated.
 ** <<t-core,Основная команда (Core Team)>>
 ** <<t-doceng,Команда управления документацией>>
 ** <<t-portmgr,Команда управления портами>>
-** <<t-ports-secteam,Команда безопасности портов>>
 ** <<t-pkgmgr,Команда управления пакетами>>
 ** <<t-srcmgr,Команда управления исходным кодом>>
-* Инженерия выпусков
-** <<t-re,Основная команда выпуска релизов>>
 * Команды
 ** <<t-donations,Команда по работе с пожертвованиями>>
+** <<t-re,Команда подготовки релизов>>
 ** <<t-secteam,Команда безопасности>>
-** <<t-vendor,Отношения с поставщиками>>
+** <<t-ports-secteam,Команда безопасности портов>>
+** <<t-vendor,Отдел по связям с вендорами>>
 * Секретари
 ** <<t-core-secretary,Секретарь Основной команды>>
 ** <<t-doceng-secretary,Секретарь команды инженерии документации>>
 ** <<t-portmgr-secretary,Секретарь команды управления портами>>
 ** <<t-srcmgr-secretary,Секретарь команды управления исходным кодом>>
 * Внутреннее администрирование
-** <<t-accounts,Команда управления учетными записями>>
+** <<t-accounts,Команда управления учётными записями>>
 ** <<t-backups,Администраторы резервного копирования>>
 ** <<t-bugmeister,Багмастер (Bugmeister)>>
 ** <<t-clusteradm,Администраторы кластера>>
@@ -50,8 +49,6 @@ then this page must be updated.
 ** <<t-postmaster,Почтовая команда (Postmaster)>>
 ** <<t-webmaster,Веб-мастера>>
 ** <<t-wiki,Команда администрирования Вики>>
-
-'''
 
 [[t-core]]
 == Основная команда FreeBSD <core@FreeBSD.org>
@@ -91,22 +88,6 @@ https://www.freebsd.org/portmgr/charter/[Устав команды portmgr] по
 * {rene}
 * {dvl}
 
-'''
-
-[[t-ports-secteam]]
-== Команда безопасности портов FreeBSD <ports-secteam@FreeBSD.org>
-
-Основная обязанность команды безопасности портов FreeBSD — обеспечение оперативного реагирования на инциденты безопасности, затрагивающие коллекцию портов FreeBSD, и защита сообщества пользователей FreeBSD путем информирования сообщества об ошибках, уязвимостях, популярных атаках и других рисках.
-Более подробная информация доступна на https://wiki.freebsd.org/PortsSecteam[странице Вики].
-
-* {fernape}
-* {fluffy}
-* {joneum}
-* {riggs}
-* {tz}
-
-'''
-
 [[t-pkgmgr]]
 == Команда управления пакетами FreeBSD <pkgmgr@FreeBSD.org>
 
@@ -114,8 +95,6 @@ https://www.freebsd.org/portmgr/charter/[Устав команды portmgr] по
 
 * {antoine}
 * {bdrewery}
-
-'''
 
 [[t-srcmgr]]
 == Команда управления исходным кодом FreeBSD <srcmgr@FreeBSD.org>
@@ -128,31 +107,33 @@ https://www.freebsd.org/srcmgr/charter/[Устав команды srcmgr] под
 * {jhb}
 * {markj}
 
-[[t-re]]
-== Основная команда команда выпуска релизов <re@FreeBSD.org>
-
-Основная команда команда выпуска релизов отвечает за установление и публикацию графиков выпуска официальных релизов проекта FreeBSD, объявление о заморозках кода и поддержку веток `releng/*`, среди прочего.
-https://www.freebsd.org/releng/charter/[Устав команды команда выпуска релизов] подробно описывает обязанности и ответственность Основной команды инженерии выпусков.
-
-* {dch}
-* {blackend}
-* {jfree}
-* {delphij}
-* {emaste} (Заместитель руководителя)
-* {mmokhi}
-* {cperciva} (Руководитель)
-* {bofh}
-* {ivy}
-
 [[t-donations]]
 == Команда по работе с пожертвованиями <donations@FreeBSD.org>
 
-Команда по работе с пожертвованиями отвечает за ответ на предложения о пожертвованиях, установление руководящих принципов и процедур для пожертвований и координацию предложений о пожертвованиях с сообществом разработчиков FreeBSD.
-Более подробное описание обязанностей Команды по работе с пожертвованиями доступно по ссылке: link:https://www.freebsd.org/donations/[Координатор по пожертвованиям FreeBSD].
+Команда по работе с пожертвованиями отвечает за реагирование на предложения о пожертвованиях, установление руководящих принципов и процедур для пожертвований и согласование предложений о пожертвованиях с сообществом разработчиков FreeBSD.
+Более подробное описание обязанностей Команды по работе с пожертвованиями доступно на странице link:https://www.freebsd.org/ru/donations/[Центра пожертвований FreeBSD].
 
 * {gahr}
 * {bhughes}
 * {adridg}
+
+[[t-re]]
+== Команда подготовки релизов <re@FreeBSD.org>
+
+Команда подготовки релизов отвечает за формирование и публикацию графиков выпуска официальных релизов проекта FreeBSD, за объявления о приостановке изменений кода и, кроме всего прочего, за обслуживание веток `releng/*`.
+https://www.freebsd.org/ru/releng/charter/[Устав команды подготовки релизов] более подробно описывает обязанности и ответственность Команды подготовки релизов.
+
+* {carlavilla}
+* {dch}
+* {blackend}
+* {leres}
+* {delphij}
+* {emaste} (Заместитель руководителя)
+* {cperciva} (Руководитель)
+* {bofh}
+* {vladlen}
+* {ivy}
+* {ziaee}
 
 [[t-secteam]]
 == Команда безопасности <secteam@FreeBSD.org>
@@ -163,25 +144,35 @@ https://www.freebsd.org/releng/charter/[Устав команды команда
 
 * {gordon} (Офицер)
 * {allanjude} (Представитель Основной команды)
-* {delphij} (Почетный офицер, представитель команды инженерии выпусков)
-* {des} (Почетный офицер)
+* {delphij} (Почётный офицер, представитель команды инженерии выпусков)
+* {des} (Почётный офицер)
 * {emaste} (Заместитель офицера)
 * {markj}
 * {oshogbo}
 * {philip}
 
+[[t-ports-secteam]]
+== Команда безопасности портов FreeBSD <ports-secteam@FreeBSD.org>
+
+Основной обязанностью команды безопасности портов FreeBSD является обеспечение оперативного реагирования на инциденты безопасности, затрагивающие коллекцию портов FreeBSD, и защита сообщества пользователей FreeBSD за счёт постоянного информирования сообщества об ошибках, уязвимостях, популярных атаках и других рисках.
+Более подробная информация доступна на https://wiki.freebsd.org/PortsSecteam[странице Wiki].
+
+* {fernape}
+* {fluffy}
+* {joneum}
+* {riggs}
+* {tz}
+
 [[t-vendor]]
-== Отношения с поставщиками <vendor-relations@FreeBSD.org>
+== Отдел по связям с вендорами <vendor-relations@FreeBSD.org>
 
-Отдел по связям с поставщиками отвечает за обработку электронной почты от производителей аппаратного и программного обеспечения.
-Письма, отправленные в Отдел по связям с поставщиками, пересылаются в Основную команду FreeBSD, а также в Фонд FreeBSD.
-
-'''
+Отдел по связям с вендорами отвечает за обработку электронной почты от производителей аппаратного и программного обеспечения.
+Письма, направляемые в Отдел по связям с вендорами, пересылаются в Основную команду FreeBSD, а также в Фонд FreeBSD.
 
 [[t-core-secretary]]
 == Секретарь Основной команды <core-secretary@FreeBSD.org>
 
-Секретарь Основной команды FreeBSD является членом Основной команды без права голоса, ответственным за документирование работы, выполненной core, отслеживание повестки дня core, связь с членами, не входящими в core, от имени core, рассылку писем для core и взаимодействие с административной командой по утверждению коммиттеров/учетных записей.
+Секретарь Основной команды FreeBSD является членом Основной команды без права голоса, ответственным за документирование работы, выполненной core, отслеживание повестки дня core, связь с членами, не входящими в core, от имени core, рассылку писем для core и взаимодействие с административной командой по утверждению коммиттеров/учётных записей.
 Секретарь Основной команды также отвечает за написание и рассылку ежемесячных отчетов о состоянии сообществу разработчиков FreeBSD, содержащих сводку последних решений и действий core.
 
 * {rene}
@@ -206,18 +197,16 @@ https://www.freebsd.org/releng/charter/[Устав команды команда
 
 В настоящее время секретарь команды управления исходным кодом не назначен; письма пересылаются в команду управления исходным кодом.
 
-'''
-
 [[t-accounts]]
-== Команда управления учетными записями <accounts@>
+== Команда управления учётными записями <accounts@>
 ////
-admins mail aliases intentionally left incomplete
+Почтовые алиасы администраторов намеренно оставлены неполными
 ////
 
-Команда управления учетными записями отвечает за настройку учетных записей для новых коммиттеров в проекте.
-Запросы на создание новых учетных записей не будут обработаны без соответствующего одобрения от уполномоченного органа.
+Команда управления учётными записями отвечает за настройку учётных записей для новых коммиттеров в проекте.
+Запросы на создание новых учётных записей не будут обработаны без соответствующего одобрения от уполномоченного органа.
 
-Письма, отправленные в Команду управления учетными записями, обрабатываются Администраторами кластера.
+Письма, отправленные в Команду управления учётными записями, обрабатываются Администраторами кластера.
 
 [[t-backups]]
 == Администраторы резервного копирования <backups@>
@@ -235,7 +224,7 @@ admins mail aliases intentionally left incomplete
 Команда багмастера отвечает за обеспечение работоспособности программного обеспечения для отчетов о проблемах, правильную категоризацию записей и отсутствие недопустимых записей.
 
 * {linimon}
-* Сива Махадеван <mailto:me@svmhdvn.name[]>
+* {siva}
 * {ziaee}
 
 [[t-clusteradm]]
@@ -376,5 +365,5 @@ admins mail aliases intentionally left incomplete
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (04.12.2025): d5213e70dd8fd4771458cfa67b17b535ff4867c8
+// Original EN revision (05.02.2026): cdf54afec844cf096ccd5b922cc8942e97517a2e
 //
