12.x and 13.0 release note: Correct for Intel wireless cards use iwm(4)
PR:		257361
Reviewed by:	fernape
Differential Revision:	https://reviews.freebsd.org/D42775

--- a/website/content/en/releases/13.0R/hardware.adoc
+++ b/website/content/en/releases/13.0R/hardware.adoc
@@ -1735,7 +1735,7 @@ The {{< manpage "bwn" "4">}} driver supports Broadcom BCM43xx based wireless dev
 
 [i386, amd64] Intel PRO/Wireless 2200BG/2915ABG MiniPCI and 2225BG PCI network adapters ({{< manpage "iwi" "4">}} driver)
 
-[i386, amd64] Intel Dual Band Wireless AC 3160/7260/7265 IEEE 802.11ac network adapters ({{< manpage "iwn" "4">}} driver)
+[i386, amd64] Intel Dual Band Wireless AC 3160/7260/7265 IEEE 802.11ac network adapters ({{< manpage "iwm" "4">}} driver)
 
 [i386, amd64] Intel Wireless WiFi Link 4965AGN IEEE 802.11n PCI network adapters ({{< manpage "iwn" "4">}} driver)
 
